Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                   <div class="features-divider"></div>
                 </div>
               </features-wrapper>
-              <features-wrapper-blvl class="features-wrapper-blvl">
+              <features-wrapper-vh3n class="features-wrapper-vh3n">
                 <!--Features component-->
                 <div class="features-section1 quick-links">
                   <div class="features-heading1">
@@ -341,8 +341,8 @@
                   </p>
                   <div class="features-divider1"></div>
                 </div>
-              </features-wrapper-blvl>
-              <features-wrapper-1px9 class="features-wrapper-1px9">
+              </features-wrapper-vh3n>
+              <features-wrapper-max6 class="features-wrapper-max6">
                 <!--Features component-->
                 <div class="features-section2 quick-links">
                   <div class="features-heading2">
@@ -362,7 +362,7 @@
                   </p>
                   <div class="features-divider2"></div>
                 </div>
-              </features-wrapper-1px9>
+              </features-wrapper-max6>
             </div>
           </div>
           <div class="home-background"></div>
@@ -405,7 +405,7 @@
               </a>
               <a href="index.html">
                 <div class="home-practice-wrapper2">
-                  <practice-wrapper-f3ec class="practice-wrapper-f3ec">
+                  <practice-wrapper-6cbu class="practice-wrapper-6cbu">
                     <!--Practice component-->
                     <div class="practice-practice1">
                       <div class="practice-heading1">
@@ -428,12 +428,12 @@
                         />
                       </div>
                     </div>
-                  </practice-wrapper-f3ec>
+                  </practice-wrapper-6cbu>
                 </div>
               </a>
               <a href="index.html">
                 <div class="home-practice-wrapper3">
-                  <practice-wrapper-ws48 class="practice-wrapper-ws48">
+                  <practice-wrapper-f4kj class="practice-wrapper-f4kj">
                     <!--Practice component-->
                     <div class="practice-practice2">
                       <div class="practice-heading2">
@@ -456,12 +456,12 @@
                         />
                       </div>
                     </div>
-                  </practice-wrapper-ws48>
+                  </practice-wrapper-f4kj>
                 </div>
               </a>
               <a href="index.html">
                 <div class="home-practice-wrapper4">
-                  <practice-wrapper-71x4 class="practice-wrapper-71x4">
+                  <practice-wrapper-28cu class="practice-wrapper-28cu">
                     <!--Practice component-->
                     <div class="practice-practice3">
                       <div class="practice-heading3">
@@ -484,12 +484,12 @@
                         />
                       </div>
                     </div>
-                  </practice-wrapper-71x4>
+                  </practice-wrapper-28cu>
                 </div>
               </a>
               <a href="index.html">
                 <div class="home-practice-wrapper5">
-                  <practice-wrapper-8tfl class="practice-wrapper-8tfl">
+                  <practice-wrapper-ht4x class="practice-wrapper-ht4x">
                     <!--Practice component-->
                     <div class="practice-practice4">
                       <div class="practice-heading4">
@@ -510,12 +510,12 @@
                         />
                       </div>
                     </div>
-                  </practice-wrapper-8tfl>
+                  </practice-wrapper-ht4x>
                 </div>
               </a>
               <a href="index.html">
                 <div class="home-practice-wrapper6">
-                  <practice-wrapper-do05 class="practice-wrapper-do05">
+                  <practice-wrapper-lrth class="practice-wrapper-lrth">
                     <!--Practice component-->
                     <div class="practice-practice5">
                       <div class="practice-heading5">
@@ -536,7 +536,7 @@
                         />
                       </div>
                     </div>
-                  </practice-wrapper-do05>
+                  </practice-wrapper-lrth>
                 </div>
               </a>
             </div>
@@ -953,7 +953,7 @@
                   </div>
                 </div>
               </doctor-wrapper>
-              <doctor-wrapper-3h0c class="doctor-wrapper-3h0c">
+              <doctor-wrapper-q4j4 class="doctor-wrapper-q4j4">
                 <!--Doctor component-->
                 <div class="doctor-doctor1">
                   <img
@@ -971,8 +971,8 @@
                     </p>
                   </div>
                 </div>
-              </doctor-wrapper-3h0c>
-              <doctor-wrapper-aphn class="doctor-wrapper-aphn">
+              </doctor-wrapper-q4j4>
+              <doctor-wrapper-iovz class="doctor-wrapper-iovz">
                 <!--Doctor component-->
                 <div class="doctor-doctor2">
                   <img
@@ -990,8 +990,8 @@
                     </p>
                   </div>
                 </div>
-              </doctor-wrapper-aphn>
-              <doctor-wrapper-kzck class="doctor-wrapper-kzck">
+              </doctor-wrapper-iovz>
+              <doctor-wrapper-dcrh class="doctor-wrapper-dcrh">
                 <!--Doctor component-->
                 <div class="doctor-doctor3">
                   <img
@@ -1009,7 +1009,7 @@
                     </p>
                   </div>
                 </div>
-              </doctor-wrapper-kzck>
+              </doctor-wrapper-dcrh>
             </div>
           </div>
           <div class="home-search2">
